python/executable/build/bdist.macosx-10.8-x86_64/python2.7-standalone/app/collect/pysdif/pysdif.pxd

            
    # 
    # #ifndef SWIG
    # typedef enum SdifSignatureE
    # {
    #   eSDIF = SdifSignatureConst('S','D','I','F'), /* SDIF header */
    #   e1NVT = SdifSignatureConst('1','N','V','T'), /* Name Value Table */
    #   e1TYP = SdifSignatureConst('1','T','Y','P'), /* TYPe declarations */
    #   e1MTD = SdifSignatureConst('1','M','T','D'), /* Matrix Type Declaration */
    #   e1FTD = SdifSignatureConst('1','F','T','D'), /* Frame Type Declaration */
    #   e1IDS = SdifSignatureConst('1','I','D','S'), /* ID Stream Table */
    #   eSDFC = SdifSignatureConst('S','D','F','C'), /* Start Data Frame Chunk (text files) */
    #   eENDC = SdifSignatureConst('E','N','D','C'), /* END Chunk (text files) */
    #   eENDF = SdifSignatureConst('E','N','D','F'), /* END File (text files) */
    #   eFORM = SdifSignatureConst('F','O','R','M'), /* FORM for IFF compatibility (obsolete ?) */
    #   eEmptySignature = SdifSignatureConst('\0','\0','\0','\0')
    # } SdifSignatureET;
    # #endif
    # 
    cdef enum SdifSignatureE:
        eSDIF = 1396984064,
        e1NVT = 827217408,
        e1TYP = 827611392,
        e1MTD = 827151360,
        e1FTD = 826692608,
        e1IDS = 826885120,
        eEmptySignature = 0
    ctypedef SdifSignatureE SdifSignatureET
    
    # typedef enum SdifModifModeE
    # {
    #   eNoModif,
    #   eCanModif
    # } SdifModifModeET;
    # 
    enum SdifModifModeE:
        eNoModif,
        eCanModif
    ctypedef SdifModifModeE SdifModifModeET
    # 
    # /* DataTypeEnum
    # 
    #    On Matt Wright's visit at IRCAM June 1999, we defined a new
    #    encoding for the MatrixDataType field with the feature that the low
    #    order byte encodes the number of bytes taken by each matrix
    #    element.  
    # 
    #    Low order byte encodes the number of bytes 
    #    High order bytes come from this (extensible) enum:
    # 
    #         0 : Float
    #         1 : Signed integer
    #         2 : Unsigned integer
    #         3 : Text (UTF-8 when 1 byte)
    #         4 : arbitrary/void
    # */
    # typedef enum SdifDataTypeE
    # {
    #   eText     = 0x0301,
    #   eChar     = 0x0301,
    #   eFloat4   = 0x0004,
    #   eFloat8   = 0x0008,
    #   eInt1     = 0x0101,
    #   eInt2     = 0x0102,
    #   eInt4     = 0x0104,
    #   eInt8     = 0x0108,
    #   eUInt1    = 0x0201,
    #   eUInt2    = 0x0202,
    #   eUInt4    = 0x0204,
    #   eUInt8    = 0x0208,
    #             
    #   eFloat4a  = 0x0001,   /* =  1 */    /* Backwards compatibility with old */
    #   eFloat4b  = 0x0020,   /* = 32 */    /* IRCAM versions < 3 of SDIF */
    #   eFloat8a  = 0x0002,   /* =  2 */    /* IN TEXT MODE ONLY! */
    #   eFloat8b  = 0x0040    /* = 64 */
    # } SdifDataTypeET;
    # 
    cdef enum SdifDataTypeE:
        eText   = 0x0301,
        eChar   = 0x0301,
        eFloat4   = 0x0004,
        eFloat8   = 0x0008,
        eInt1     = 0x0101,
        eInt2     = 0x0102,
        eInt4     = 0x0104,
        eInt8     = 0x0108,
        eUInt1    = 0x0201,
        eUInt2    = 0x0202,
        eUInt4    = 0x0204,
        eUInt8    = 0x0208,
              
        eFloat4a  = 0x0001,  #   /* =  1 */    /* Backwards compatibility with old */
        eFloat4b  = 0x0020,  #   /* = 32 */    /* IRCAM versions < 3 of SDIF */
        eFloat8a  = 0x0002,  #   /* =  2 */    /* IN TEXT MODE ONLY! */
        eFloat8b  = 0x0040   #   /* = 64 */
    ctypedef SdifDataTypeE SdifDataTypeET
    
    # /* SdifList.h */
    # typedef void (*KillerFT) (void *);
    ctypedef void (*KillerFT) (void *)
    # 
    # typedef struct SdifListNS SdifListNT;
    cdef struct SdifListNS
    ctypedef SdifListNS SdifListNT
    cdef struct SdifListNS:
        SdifListNT *Next
        void *Data
    
    # 
    # struct SdifListNS 
    # {
    #   SdifListNT *Next;
    #   void* Data;
    # };
    # 
    # 
    # typedef struct SdifListNStockS SdifListNStockT;
    # 
    # struct SdifListNStockS
    # {
    #     SdifListNT*  StockList; /* list of arrays of nodes, the first node is used to chain arrays */
    #     unsigned int SizeOfOneStock; /* must be > 1 */
    #     unsigned int NbStock;
    # 
    #     unsigned int NbNodesUsedInCurrStock;
    # 
    #     SdifListNT* Trash; /* to recycle nodes */
    # };
    struct SdifListNStockS:
        SdifListNT*  StockList       # /* list of arrays of nodes, the first node is used to chain arrays */
        unsigned int SizeOfOneStock  # /* must be > 1 */
        unsigned int NbStock
        unsigned int NbNodesUsedInCurrStock
        SdifListNT* Trash            # /* to recycle nodes */
    ctypedef SdifListNStockS SdifListNStockT
    # 
    # 
    # /* lists management */
    # 
    # typedef struct SdifListS SdifListT;
    # typedef SdifListT       *SdifListP;
    # 
    # struct SdifListS
    # {
    #   /* fifo list */
    #   SdifListNT *Head;
    #   SdifListNT *Tail;
    #   SdifListNT *Curr;  /* pointer before the next */
    #   void (*Killer)(void *);  
    #   unsigned int NbData;
    # } ;
    # 
    cdef struct SdifListS:
        pass
    ctypedef SdifListS SdifListT
    ctypedef SdifListT* SdifListP

    # /* SdifNameValue.h */
    # typedef struct SdifNameValueS SdifNameValueT;
    # struct SdifNameValueS
    # {
    #   char *Name;
    #   char *Value;
    # } ;

    struct SdifNameValueS:
        char *Name
        char *Value
    ctypedef SdifNameValueS SdifNameValueT

    # 
    # typedef struct SdifNameValueTableS SdifNameValueTableT;
    # struct SdifNameValueTableS
    # {
    #     SdifHashTableT* NVHT;
    #     SdifUInt4       NumTable;
    #     SdifUInt4       StreamID;   /* id of stream the table belongs to */
    # } ;

    struct SdifNameValueTableS:
        SdifHashTableT* NVHT
        SdifUInt4 NumTable
        SdifUInt4 StreamID
    ctypedef SdifNameValueTableS SdifNameValueTableT

    # 
    # typedef struct SdifNameValuesLS SdifNameValuesLT;
    # struct SdifNameValuesLS
    # {
    #     SdifListT*              NVTList;  /* list of SdifNameValueTableT */
    #     SdifNameValueTableT*    CurrNVT;
    #     SdifUInt4               HashSize;
    # };
    struct SdifNameValuesLS:
        SdifListT*  NVTList
        SdifNameValueTableT*    CurrNVT
        SdifUInt4   HashSize
    ctypedef SdifNameValuesLS SdifNameValuesLT
    # 
    # 
    # /* SdifStreamID.h */
    # 
    # /*
    # // DATA GROUP:          Stream ID Table and Entries for 1IDS ASCII chunk
    # */
    # 
    # 
    # /*DOC:
    #   Stream ID Table Entry */
    # typedef struct SdifStreamIDS SdifStreamIDT;
    # struct SdifStreamIDS
    # {
    #   SdifUInt4     NumID;
    #   char *Source;
    #   char *TreeWay; /* for the moment or to be general*/
    # } ;
    struct SdifStreamIDS:
        SdifUInt4 NumID
        char *Source
        char *TreeWay
    ctypedef SdifStreamIDS SdifStreamIDT
    # 
    # /*DOC:
    #   Stream ID Table, holds SdifStreamIDT stream ID table entries */
    # typedef struct SdifStreamIDTableS SdifStreamIDTableT;
    # struct SdifStreamIDTableS
    # {
    #     SdifHashTableT* SIDHT;
    #     SdifUInt4       StreamID;
    #     SdifFloat8      Time;       /* always _SdifNoTime */
    # } ;
    struct SdifStreamIDTableS:
        SdifHashTableT* SIDHT
        SdifUInt4       StreamID
        SdifFloat8      Time   # /* always _SdifNoTime */
    ctypedef SdifStreamIDTableS SdifStreamIDTableT
    # 
    # 
    # typedef struct SdifColumnDefS SdifColumnDefT;
    # 
    # struct SdifColumnDefS
    # {
    #   char *Name;
    #   SdifUInt4 Num;
    # } ;
    struct SdifColumnDefS:
        char *Name
        SdifUInt4 Num
    ctypedef SdifColumnDefS SdifColumnDefT
    # 
    # 
    # /* SdifMatrixType.h */
    # typedef struct SdifMatrixTypeS SdifMatrixTypeT;
    # 
    # struct SdifMatrixTypeS
    # {
    #   SdifSignature     Signature;
    # 
    #   SdifMatrixTypeT*  MatrixTypePre;
    # 
    #   SdifListT*        ColumnUserList; /* List of columns added by user: 
    #                                        SdifMatrixTypeInsertTailColumn(MatrixTypeT *)
    #                                     */
    # 
    #   SdifUInt4       NbColumnDef; /* Number of columns created by user:
    #                                   SdifMatrixTypeInsertTailColumn(MatrixTypeT *)
    #                                */
    #   SdifModifModeET ModifMode;
    # };
    cdef struct SdifMatrixTypeS
    ctypedef SdifMatrixTypeS SdifMatrixTypeT
    cdef struct SdifMatrixTypeS:
        SdifSignature       Signature
        SdifMatrixTypeT*    MatrixTypePre
        SdifListT*          ColumnUserList
        SdifUInt4           NbColumnDef
        SdifModifModeET     ModifMode
    
    # 
    # 
    # /* SdifFrameType.h */
    # typedef struct SdifComponentS SdifComponentT;
    # struct SdifComponentS
    # {
    #   SdifSignature MtrxS;
    #   char *Name;
    #   SdifUInt4  Num;
    # } ;
    struct SdifComponentS:
        SdifSignature MtrxS
        char *Name
        SdifUInt4 Num
    ctypedef SdifComponentS SdifComponentT
    
    # 
    # typedef struct SdifFrameTypeS SdifFrameTypeT;
    # struct SdifFrameTypeS
    # {
    #   SdifSignature Signature;
    # 
    #   SdifFrameTypeT* FrameTypePre;
    # 
    #   SdifHashTableT *ComponentUseHT;
    #   SdifUInt4       NbComponentUse;
    # 
    #   SdifUInt4       NbComponent;
    #   SdifModifModeET ModifMode;
    # };
    cdef struct SdifFrameTypeS
    ctypedef SdifFrameTypeS SdifFrameTypeT
    struct SdifFrameTypeS:
        SdifSignature Signature
        SdifFrameTypeT* FrameTypePre
        SdifHashTableT *ComponentUseHT
        SdifUInt4       NbComponentUse
        SdifUInt4       NbComponent
        SdifModifModeET ModifMode
    
    # 
    # 
    # /* SdifMatrix.h */
    # typedef struct SdifMatrixHeaderS SdifMatrixHeaderT;
    # 
    # struct SdifMatrixHeaderS
    # {
    #   SdifSignature  Signature;
    #   SdifDataTypeET DataType; /* Low level data type */
    #   SdifUInt4      NbRow;
    #   SdifUInt4      NbCol;
    # } ;
    struct SdifMatrixHeaderS:
        SdifSignature  Signature
        SdifDataTypeET DataType # /* Low level data type */
        SdifUInt4      NbRow
        SdifUInt4      NbCol
    ctypedef SdifMatrixHeaderS SdifMatrixHeaderT
    
    
    # 
    # 
    # typedef union DataTypeU DataTypeUT;
    # 
    # union DataTypeU
    # {
    #   SdifFloat4 *Float4;
    #   SdifFloat8 *Float8;
    #   SdifInt1   *Int1  ;
    #   SdifInt2   *Int2  ;
    #   SdifInt4   *Int4  ;
    # /*SdifInt8   *Int8  ;*/
    #   SdifUInt1  *UInt1 ;
    #   SdifUInt2  *UInt2 ;
    #   SdifUInt4  *UInt4 ;
    # /*SdifUInt8  *UInt8 ;*/
    #   SdifChar   *Char  ;
    #   void       *Void  ;   /* generic pointer */
    # } ;
    #
    union DataTypeU:
        SdifFloat4 *Float4
        SdifFloat8 *Float8
        SdifInt1   *Int1  
        SdifInt2   *Int2  
        SdifInt4   *Int4  
        SdifUInt1  *UInt1 
        SdifUInt2  *UInt2 
        SdifUInt4  *UInt4 
        SdifChar   *Char  
        void       *Void  #;   /* generic pointer */
    ctypedef DataTypeU DataTypeUT
    # 
    # typedef struct SdifOneRowS SdifOneRowT;
    # 
    # struct SdifOneRowS
    # {
    #   SdifDataTypeET DataType;
    #   SdifUInt4      NbData;
    #   DataTypeUT     Data;
    #   SdifUInt4      NbGranuleAlloc;
    # } ;
    struct SdifOneRowS:
        SdifDataTypeET DataType
        SdifUInt4      NbData
        DataTypeUT     Data
        SdifUInt4      NbGranuleAlloc
    ctypedef SdifOneRowS SdifOneRowT
